# cold-blue

./: .env  .env.dev  .gitignore  Cargo.toml  dev.sh  docker-compose.yml  notes.norg
locales/en_US/: simple.ftl
migrations/2024-04-03-021327_create_users/: up.sql
migrations/2024-04-03-021437_create_actors/: down.sql  up.sql
migrations/2024-04-03-021437_create_credentials/: up.sql
migrations/2024-04-03-021443_create_feeds/: up.sql
src/: agent.rs  boot.rs  main.rs  server.rs  util.rs
src/commands/: mod.rs  seed_superuser.rs  serve.rs
src/db/: credentials.rs  creds.rs  feed.rs  mod.rs  schema.rs  user.rs
src/db/credentials/: payload.rs
src/db/creds/: payload.rs
src/db/feed/: params.rs
src/server/: boot.rs  cookies.rs  creds.rs  handlers.rs  locale.rs  mod.rs  session.rs  user.rs
src/server/handlers/: index.rs  mod.rs  user.rs
src/server/handlers/user/: credentials.rs  feeds.rs
templates/: base.html  login.html  macros.html
templates/user/: credentials.html  feeds.html  layout.html
templates/user/credentials/: add-atproto.html
templates/user/feeds/: add-atproto.html  add-confirm.html  add.html
