[package]
name = "cold-blue"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["arrayvec", "zeroize"] }
anyhow = "1.0.81"
argon2 = "0.5.3"
arrayvec = { version = "0.7.4", features = ["serde", "zeroize"] }
askama = { version = "0.12.1", features = ["markdown", "config"] }
atom_syndication = "0.12.2"
atrium-api = { version = "0.20.0", features = ["tokio"] }
atrium-xrpc-client = { version = "0.5.1", features = ["reqwest"] }
base64 = "0.22.0"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.4", features = ["env", "cargo", "derive", "wrap_help"] }
const_format = "0.2.32"
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
diesel = { version = "2.1.5", features = ["postgres", "uuid"] }
diesel-async = { version = "0.4.1", features = ["deadpool", "postgres"] }
dotenvy = "0.15.7"
futures-util = "0.3.30"
hostname = "0.4.0"
jsonwebtoken = "9.3.0"
listenfd = "1.0.1"
poem = { version = "3.0.0", features = ["compression", "i18n", "csrf"] }
rpassword = "7.3.1"
rss = { version = "2.0.7", features = ["atom"] }
rustls-pemfile = "2.1.2"
serde = { version = "1.0.197", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["parking_lot", "tracing", "rt-multi-thread", "macros", "signal"] }
tracing = "0.1.40"
tracing-loki = "0.2.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "tracing-log"] }
url = "2.5.0"
uuid = { version = "1.8.0", features = ["serde", "v4"] }
zeroize = "1.7.0"
