[package]
name = "cold-blue"
version = "0.1.0"
edition = "2021"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["arrayvec", "zeroize"] }
anyhow = "1.0.82"
argon2 = "0.5.3"
arrayvec = { version = "0.7.4", features = ["serde", "zeroize"] }
askama = { version = "0.12.1", features = ["markdown", "config"] }
atom_syndication = "0.12.2"
atrium-api = { version = "0.21.3", features = ["tokio"] }
atrium-xrpc-client = { version = "0.5.3", features = ["reqwest"] }
base64 = "0.22.0"
bincode = "1.3.3"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.4", features = ["env", "cargo", "derive", "wrap_help"] }
const_format = "0.2.32"
dashmap = "5.5.3"
deadpool = { version = "0.9.5", features = ["rt_tokio_1"] }
diesel = { version = "2.1.6", features = ["postgres", "serde_json", "uuid"] }
diesel-async = { version = "0.4.1", features = ["deadpool", "postgres"] }
dispose = "0.5.0"
dotenvy = "0.15.7"
ed25519-dalek = { version = "2.1.1", features = ["pem", "alloc"] }
either = "1.11.0"
futures-util = "0.3.30"
hmac = "0.12.1"
hostname = "0.4.0"
jsonwebtoken = "9.3.0"
listenfd = "1.0.1"
parking_lot = "0.12.1"
poem = { version = "3.0.1", features = ["compression", "i18n", "csrf"] }
rand = { version = "0.8.5", features = ["log"] }
ron = "0.8.1"
rpassword = "7.3.1"
rss = { version = "2.0.8", features = ["atom"] }
serde = { version = "1.0.202", features = ["derive"] }
serde_json = { version = "1.0.117", features = ["float_roundtrip"] }
serde_with = { version = "3.8.1", features = ["base64"] }
sha2 = "0.10.8"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["parking_lot", "tracing", "rt-multi-thread", "macros", "signal"] }
tracing = "0.1.40"
tracing-loki = "0.2.4"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "tracing-log"] }
typenum = { version = "1.17.0", features = ["const-generics"] }
url = { version = "2.5.0", features = ["serde"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
zeroize = "1.7.0"
